# flucture

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DB_REPOSITORY_METADATA_MIGRATION.md  DEBUG_PH_WERT_PROBLEM.md  DartConfiguration.tcl  Makefile  Makefile.tests  debug.md  flucture  main.cpp  pdf_to_layout_api.cpp  qr_tool  qr_tool.cpp  qr_vergabefix  qr_vergabefix.cpp  test_xobject_bisect.cpp  test_xobject_simple.cpp
.cache/clangd/index/: BasicTest.cpp.0C676135DD75C5A5.idx  BasicTest.cpp.384B62528B1B8C0B.idx  BuildAglMapsBinary.cpp.82D286D38A70FC5D.idx  BuildAglMapsBinary.cpp.D025A8DDC5DCB9E5.idx  BuildPredefinedCMaps.cpp.461029239B90EF60.idx  BuildPredefinedCMaps.cpp.D5F4BB3420A3E208.idx  CMakeCXXCompilerId.cpp.4D799340DA4FFB7E.idx  CMakeCXXCompilerId.cpp.B3B4A6530EB295AB.idx  CMapTest.cpp.13823E72B84ACE62.idx  CMapTest.cpp.1B9F259102548AA3.idx  CmsContext.cpp.17B1C6806D5A5CBE.idx  CmsContext.cpp.7334378859C099A3.idx  CmsContext.h.243C8DBF411B66F3.idx  CmsContext.h.4B6CE051086789F0.idx  ColorTest.cpp.8D4AE087FE96DA57.idx  ColorTest.cpp.DBFDF296834174D0.idx  Corners.cpp.7BCF28F3FFCDE25C.idx  Corners.cpp.C186A778EBCFF190.idx  Corners.h.34334CB622EEBA76.idx  Corners.h.FCD7D13263CB3451.idx  DateTest.cpp.86164C68F1DB112D.idx  DateTest.cpp.9D8A635AB1515613.idx  DeleteOperation.cpp.5F78B1DF835B986E.idx  DeleteOperation.cpp.F150A4C129A88EC2.idx  DeleteOperation.h.2FB92617ACE67C2A.idx  DeleteOperation.h.AB4CB9A1AC22FB73.idx  DeviceTest.cpp.14484172D292248C.idx  DeviceTest.cpp.D069B37ECAA69F62.idx  EncodingTest.cpp.76A9E0A1922AF786.idx  EncodingTest.cpp.F1B992294040B482.idx  EncryptTest.cpp.307CB93CF6387209.idx  EncryptTest.cpp.653E7DA235FC3687.idx  EnumFlags.h.6775B62A40A7268C.idx  EnumFlags.h.AB34E632FB87134F.idx  FileSystem.h.289CC65FE831DF18.idx  FilterTest.cpp.133F1421F5737337.idx  FilterTest.cpp.E906FF5CC78F9476.idx  FontTest.cpp.CF711131D5D61BEE.idx  FontTest.cpp.DB3239624D2F27A4.idx  FontTrueTypeSubset.cpp.152EF216FA7CEE47.idx  (+863 more)
aiprocesses/: flx_ai_process.cpp  flx_ai_process.h
aiprocesses/chat/: flx_chat_snippet_source.cpp  flx_chat_snippet_source.h  flx_llm_api.cpp  flx_llm_api.h  flx_llm_chat.cpp  flx_llm_chat.h  flx_llm_chat_interfaces.h  flx_llm_tool_provider.h  flx_mcp_tool_provider.cpp  flx_mcp_tool_provider.h
aiprocesses/eval/: flx_ai_process_evaluator.cpp  flx_ai_process_evaluator.h  flx_layout_evaluator.cpp  flx_layout_evaluator.h
aiprocesses/snippets/: flx_snippet.cpp  flx_snippet.h  flx_snippet_source.cpp  flx_snippet_source.h
api/aimodels/: flx_openai_api.cpp  flx_openai_api.h
api/client/: flx_http_request.cpp  flx_http_request.h
api/db/: db_connection.h  db_exceptions.h  db_query.h  db_query_builder.cpp  db_query_builder.h  db_repository.h  db_search_criteria.cpp  db_search_criteria.h  flx_semantic_embedder.cpp  flx_semantic_embedder.h  pg_connection.cpp  pg_connection.h  pg_query.cpp  pg_query.h  reconnect_helper.cpp  reconnect_helper.h
api/json/: flx_json.cpp  flx_json.h
api/mcp/: flx_mcp_adapter.cpp  flx_mcp_adapter.h
api/server/: flx_httpdaemon.cpp  flx_httpdaemon.h  flx_rest_api.cpp  flx_rest_api.h
api/xml/: flx_xml.cpp  flx_xml.h
datasets/forms/: document.json
datasets/tender-offers/test_0/: test.docx  test.xlsx
datasets/tender-offers/test_5/L_193424_NC-0_TVZ-79566/: 3665814.asc  Inhalt.csv
docs/: ERROR_HANDLING_CONCEPT.md  FLUCTURE_MCP_INTEGRATION_ANALYSIS.md  MCP_INTEGRATION_STATUS.md  MCP_QUICK_START.md  TESTING_GUIDELINES.md  XML_MIGRATION_GUIDE.md  flx_model_system.md
docs/sessions/: 2025-12-04_cleanup_analysis.md  2025-12-04_qa_and_type_mapping_cleanup.md  2025-12-05_documentation_cleanup.md
documents/: flx_doc_sio.cpp  flx_doc_sio.h  flx_layout_to_html.cpp  flx_layout_to_html.h
documents/layout/: flx_layout_bounds.cpp  flx_layout_bounds.h  flx_layout_geometry.cpp  flx_layout_geometry.h  flx_layout_image.cpp  flx_layout_image.h  flx_layout_text.cpp  flx_layout_text.h  flx_layout_vertex.cpp  flx_layout_vertex.h
documents/pdf/: flx_pdf_coords.h  flx_pdf_sio.cpp  flx_pdf_sio.h  flx_pdf_sio_old.cpp  flx_pdf_text_extractor.cpp  flx_pdf_text_extractor.h  flx_pdf_text_extractor_fast.cpp  flx_pdf_text_extractor_fast.h  podofo_config.h
documents/pdf/podofo-master/: Doxyfile  Makefile  cmake_uninstall.cmake  podofoConfig.cmake
documents/pdf/podofo-master/src/podofo/: Makefile  (+1 more)
documents/qr/: README.md  example_qr_generation.cpp  flx_qr_generator.cpp  flx_qr_generator.h  flx_qr_style.cpp  flx_qr_style.h
test-scripts/: run-all.sh  run-db-tests.sh  run-fast.sh  run-unit.sh
tests/: README.md  test_auto_hierarchical_crud.cpp  test_complex_roundtrip.cpp  test_db_hierarchical.cpp  test_db_orm_advanced.cpp  test_db_repository.cpp  test_debug_hierarchy.cpp  test_embedding.cpp  test_flx_datetime.cpp  test_flx_doc_sio.cpp  test_flx_fieldname.cpp  test_flx_meta.cpp  test_flx_model.cpp  test_flx_model_nesting.cpp  test_flx_model_xml_integration.cpp  test_flx_nested_path.cpp  test_layout_classes.cpp  test_layout_evaluator.cpp  test_llm_integration.cpp  test_main.cpp  test_mcp_adapter.cpp  test_pdf_parsing.cpp  test_pdf_rendering.cpp  test_pdf_text_coordinates.cpp  test_performance.cpp  test_pg_connection.cpp  test_pg_query.cpp  test_real_pdf_output.cpp  test_reconnect_helper.cpp  test_semantic_search_e2e.cpp  test_sql_injection_safety.cpp  test_xml.cpp  test_xobject_extraction.cpp
tests/db_repository/crud/: test_crud_basic.cpp
tests/db_repository/errors/: test_error_handling_spec.cpp
tests/db_repository/hierarchy/: test_cascade_delete.cpp  test_hierarchy_basic.cpp
tests/db_repository/search/: test_search_operators.cpp  test_semantic_search.cpp
tests/db_repository/shared/: db_test_fixtures.h  db_test_models.h
utils/: flx_datetime.cpp  flx_datetime.h  flx_element.cpp  flx_element.h  flx_env.cpp  flx_env.h  flx_geometry.cpp  flx_geometry.h  flx_layout_element.cpp  flx_layout_element.h  flx_layout_elements.cpp  flx_layout_elements.h  flx_lazy_ptr.h  flx_model.cpp  flx_model.h  flx_string.cpp  flx_string.h  flx_text_element.cpp  flx_text_element.h  flx_variant.cpp  flx_variant.h
(+14 files in other folders)
